--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -6,8 +6,7 @@ metadata:
     kubernetes.io/ingress.class: azure/application-gateway
 spec:
   rules:
-    - host: spring-demo.pma4dns.competence.edu
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
