--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -2,16 +2,16 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: springdemo-ingress
-  annotations:
-    kubernetes.io/ingress.class: azure/application-gateway
+  spec:
+    ingressClassName: azure/application-gateway
 spec:
   rules:
     - http:
         paths:
           - path: /
-            pathType: Prefix
             backend:
               service:
                 name: springdemo-service
                 port:
                   number: 80
+            pathType: Exact
