--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -14,9 +14,9 @@ spec:
     spec:
       containers:
       - name: springdemo-container
-        image: pma4acr.azurecr.io/springdemo:latest
+        image: pma4acr.azurecr.io/springdemo:v2
         ports:
-        - containerPort: 8080
+        - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
@@ -27,5 +27,5 @@ spec:
     app: springdemo
   ports:
   - protocol: TCP
-    port: 8080
-    targetPort: 8080
+    port: 80
+    targetPort: 80
