--- a/src/main/resources/application-sql.properties
+++ b/src/main/resources/application-sql.properties
@@ -1,4 +1,5 @@
 #Azure sql server
 spring.datasource.url=${connection_string}
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
