--- a/src/main/resources/application-sql.properties
+++ b/src/main/resources/application-sql.properties
@@ -1,5 +1,6 @@
 #Azure sql server
 spring.datasource.url=${connection_string}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
